LV: Work in progress, messy slots and drag state

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
             <p>And long content</p>
             <p>And more content</p>
           </div>
+          <has-slots><div slot="slot-1">I am in slot 1</div><div slot="slot-2">And me, slot 2</div></has-slots>
           <template>And a template document</template>
           <script type="application/json">
             { "age": 50, "name": "Bob" }
