--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,7 @@
   </head>
   <body>
     <raisin-editor html="">
-      <template>
-        <div>
-
-          <h1>Foo</h1>
-          <p>bar</p>
-        </div>
-      </template>
+      <template> Foo  <div>baz</div><span>span</span> bar</template>
       <!-- <template>
         <table class="main-body" style="box-sizing: border-box; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; height: 100%; background-color: rgb(234, 236, 237);" width="100%" height="100%" bgcolor="rgb(234, 236, 237)">
           <tbody style="box-sizing: border-box;">
