--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
   </head>
   <body>
     <raisin-editor html="">
-      <template> Foo  <div>baz</div><span>span</span> bar</template>
+      <template>
+        Foo
+        <div title="title1" id="id1">baz</div>
+        <span>span</span> bar</template
+      >
       <!-- <template>
         <table class="main-body" style="box-sizing: border-box; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; height: 100%; background-color: rgb(234, 236, 237);" width="100%" height="100%" bgcolor="rgb(234, 236, 237)">
           <tbody style="box-sizing: border-box;">
