LV: WIP on constraints

--- a/src/index.html
+++ b/src/index.html
@@ -273,6 +273,19 @@
       </template> -->
       <template>
         <div><span>Empty</span></div>
+
+        <table>
+          <thead>
+            <tr>
+              <td>HEading</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Body</td>
+            </tr>
+          </tbody>
+        </table>
       </template>
       <!-- <template>
         <sqh-global-container background="#ffffff" poweredby="true" fontfamily="Helvetica Neue,Helvetica,Arial,sans-serif" loadingcolor="#439B76" class="squatch-container">
