LV: Fix clean up text nodes

--- a/src/index.html
+++ b/src/index.html
@@ -271,7 +271,7 @@
           </mj-body>
         </mjml>
       </template> -->
-      <template>
+      <!-- <template>
         <div><span>Empty</span></div>
 
         <table>
@@ -286,13 +286,13 @@
             </tr>
           </tbody>
         </table>
-      </template>
+      </template> -->
       <!-- <template>
         <sqh-global-container background="#ffffff" poweredby="true" fontfamily="Helvetica Neue,Helvetica,Arial,sans-serif" loadingcolor="#439B76" class="squatch-container">
         </sqh-global-container>
       </template> -->
-      <!-- <template>
-        <sqh-global-container background="#ffffff" poweredby="true" fontfamily="Helvetica Neue,Helvetica,Arial,sans-serif" loadingcolor="#439B76" class="squatch-container">
+      <template>
+        <div background="#ffffff" poweredby="true" fontfamily="Helvetica Neue,Helvetica,Arial,sans-serif" loadingcolor="#439B76" class="squatch-container">
           <sqh-text-component
             sqhbanner="true"
             ishidden="true"
@@ -437,8 +437,8 @@
             paddingbottom="10"
           >
           </sqh-text-component>
-        </sqh-global-container>
-      </template> -->
+        </div>
+      </template>
       <!-- <template>
         <table
           class="main-body"
