--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script nomodule src="/build/raisins-js.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.25/dist/shoelace/shoelace.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.27/themes/dark.css" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.25/dist/shoelace/shoelace.esm.js"></script>
   </head>
   <body>
@@ -17,6 +18,10 @@
     <link href="https://fast.ssqt.io/npm/@saasquatch/vanilla-components-assets@0.0.x/icons.css" type="text/css" rel="stylesheet" />
 
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
       sqh-grid {
         display: flex;
         justify-content: space-between;
