LV: Push CSS parsing as a sub-type of HTML dom

--- a/src/index.html
+++ b/src/index.html
@@ -294,6 +294,11 @@
         </sqh-global-container>
       </template> -->
       <template>
+        <style>
+          * {
+            background: red;
+          }
+        </style>
         <div background="#ffffff" poweredby="true" fontfamily="Helvetica Neue,Helvetica,Arial,sans-serif" loadingcolor="#439B76" class="squatch-container">
           <sqh-text-component
             sqhbanner="true"
