updated stencil-docs-target with uiSchema, basic test added

--- a/packages/stencil-docs-target/my-kitchen-sink/src/index.html
+++ b/packages/stencil-docs-target/my-kitchen-sink/src/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-ui-component first="Stencil" last="'Don't call me a framework' JS" picked-date="1649799530937" text-color="#F00"></my-ui-component>
   </body>
 </html>
